adding new feature

--- a/index.html
+++ b/index.html
@@ -134,7 +134,59 @@
         <h2 class="works-header">My Recent Works</h2>
         <span class="line"></span>
         <div class="works"></div>
-        <div class="detail-container"></div>
+        <div class="detail-container">
+          <div class="box-container">
+            <img class="detail-mobile-image" src="image/mobile-popup.svg" alt="beauty" />
+            <img class="detail-desktop-image" src="image/popup.svg" alt="beauty" />
+            <div class="detail-heading">
+              <h1 class="detail-project-title">Keeping track of hundreds of components</h1>
+              <div class="detail-content-btn">
+                <button-style class="detail-See-Live"
+                  >See-Live
+                  <img src="image/icon-export.svg" class="detail-icon" alt="icon -export" />
+                </button-style>
+                <button-style class="detail-See-Source"
+                  >See-Source
+                  <img src="image/icon-github.svg" class="detail-icon" alt="icon -github" />
+                </button-style>
+              </div>
+            </div>
+            <ul class="detail-attri-mobile-content">
+              <li class="detail-mobile-tags contrast">Html</li>
+              <li class="detail-mobile-tags contrast">Css</li>
+              <li class="detail-mobile-tags contrast">Javascript</li>
+              <li class="detail-mobile-tags contrast">Ruby on Rails</li>
+            </ul>
+            <ul class="detail-attri-desktop-content">
+              <li class="detail-desktop-tags contrast">CodeKit</li>
+              <li class="detail-desktop-tags contrast">Github</li>
+              <li class="detail-desktop-tags contrast">Bootstrap</li>
+              <li class="detail-desktop-tags contrast">Terminal</li>
+              <li class="detail-desktop-tags contrast">Codepen</li>
+            </ul>
+            <p class="detail-summary">
+              Lonem ipsium is simply dummy text of the printing and typeseting industry. Lorem ipeum
+              ha been the industry standard du mmy text ever since the 500s ,when an unknown printer
+              took agallery of type and sctambled it 1960s with the relea Lonem ipsium is simply
+              dummy text othe printing typeseting industry.Lonem ipsium is simply dummy text of the
+              printing an typeseting industry. Lorem ipeum ha been the industry standard du mmy text
+              ever since the 500s ,when an unknown printer took agallery of type and sctambled it
+              1960s with the relea Lonem ipsium is simply dummy text othe printing typeseting
+              industry.Lonem ipsium is simply dummy text of the printing an typeseting industryLorem
+              ipeum has been the industry standard dummy text ever since th
+            </p>
+            <div class="detail-content-btn-btm">
+              <button-style class="detail-See-Live"
+                >See-Live
+                <img src="image/icon-export.svg" class="detail-icon" alt="icon -export" />
+              </button-style>
+              <button-style class="detail-See-Source"
+                >See-Source
+                <img src="image/icon-github.svg" class="detail-icon" alt="icon -github" />
+              </button-style>
+            </div>
+          </div>
+        </div>
       </article>
       <section class="about">
         <h2 class="about-header">About Me</h2>
