implementing new bugs

--- a/index.html
+++ b/index.html
@@ -134,13 +134,45 @@
         <h2 class="works-header">My Recent Works</h2>
         <span class="line"></span>
         <div class="works"></div>
-        <div class="detail-container">
-          <div class="box-container">
-            <img class="detail-mobile-image" src="image/mobile-popup.svg" alt="beauty" />
-            <img class="detail-desktop-image" src="image/popup.svg" alt="beauty" />
-            <div class="detail-heading">
-              <h1 class="detail-project-title">Keeping track of hundreds of components</h1>
-              <div class="detail-content-btn">
+        <div class="detail-container-wrapper">
+          <div class="detail-container">
+            <div class="box-container">
+              <div class="detail-cancel-container">
+              <img class="detail-cancel-icon" src="image/cancel-icon-desktop.jpg" alt="cancel icon" />
+              <img class="detail-cancel-mobile-icon" src="image/cancel-icon.jpg" alt="cancel icon" />
+              <img class="detail-mobile-image" src="image/mobile-popup.svg" alt="mobile image" />
+              <img class="detail-desktop-image" src="image/popup.png" alt="desktop image" />
+              <div class="detail-heading">
+                <h1 class="detail-project-title">Keeping track of hundreds of components</h1>
+                <div class="detail-content-btn">
+                  <button-style class="detail-See-Live"
+                    >See-Live
+                    <img src="image/icon-export.svg" class="detail-icon" alt="icon -export" />
+                  </button-style>
+                  <button-style class="detail-See-Source"
+                    >See-Source
+                    <img src="image/icon-github.svg" class="detail-icon" alt="icon -github" />
+                  </button-style>
+                </div>
+              </div>
+              <ul class="detail-attri-mobile-content">
+                <li class="detail-mobile-tags contrast">Html</li>
+                <li class="detail-mobile-tags contrast">Css</li>
+                <li class="detail-mobile-tags contrast">Javascript</li>
+                <li class="detail-mobile-tags contrast">Ruby on Rails</li>
+              </ul>
+              <ul class="detail-attri-desktop-content">
+                <li class="detail-desktop-tags contrast">CodeKit</li>
+                <li class="detail-desktop-tags contrast">Github</li>
+                <li class="detail-desktop-tags contrast">Bootstrap</li>
+                <li class="detail-desktop-tags contrast">Terminal</li>
+                <li class="detail-desktop-tags contrast">Codepen</li>
+              </ul>
+              <p class="detail-summary">
+                Lonem ipsium is simply dummy text of the printing and typeseting industry. Lorem
+                ipeum ha been the industry standard du mmy text ever since the 500s ,when an unknown
+              </p>
+              <div class="detail-content-btn-btm">
                 <button-style class="detail-See-Live"
                   >See-Live
                   <img src="image/icon-export.svg" class="detail-icon" alt="icon -export" />
@@ -151,41 +183,8 @@
                 </button-style>
               </div>
             </div>
-            <ul class="detail-attri-mobile-content">
-              <li class="detail-mobile-tags contrast">Html</li>
-              <li class="detail-mobile-tags contrast">Css</li>
-              <li class="detail-mobile-tags contrast">Javascript</li>
-              <li class="detail-mobile-tags contrast">Ruby on Rails</li>
-            </ul>
-            <ul class="detail-attri-desktop-content">
-              <li class="detail-desktop-tags contrast">CodeKit</li>
-              <li class="detail-desktop-tags contrast">Github</li>
-              <li class="detail-desktop-tags contrast">Bootstrap</li>
-              <li class="detail-desktop-tags contrast">Terminal</li>
-              <li class="detail-desktop-tags contrast">Codepen</li>
-            </ul>
-            <p class="detail-summary">
-              Lonem ipsium is simply dummy text of the printing and typeseting industry. Lorem ipeum
-              ha been the industry standard du mmy text ever since the 500s ,when an unknown printer
-              took agallery of type and sctambled it 1960s with the relea Lonem ipsium is simply
-              dummy text othe printing typeseting industry.Lonem ipsium is simply dummy text of the
-              printing an typeseting industry. Lorem ipeum ha been the industry standard du mmy text
-              ever since the 500s ,when an unknown printer took agallery of type and sctambled it
-              1960s with the relea Lonem ipsium is simply dummy text othe printing typeseting
-              industry.Lonem ipsium is simply dummy text of the printing an typeseting industryLorem
-              ipeum has been the industry standard dummy text ever since th
-            </p>
-            <div class="detail-content-btn-btm">
-              <button-style class="detail-See-Live"
-                >See-Live
-                <img src="image/icon-export.svg" class="detail-icon" alt="icon -export" />
-              </button-style>
-              <button-style class="detail-See-Source"
-                >See-Source
-                <img src="image/icon-github.svg" class="detail-icon" alt="icon -github" />
-              </button-style>
-            </div>
           </div>
+        </div>
         </div>
       </article>
       <section class="about">
@@ -197,8 +196,7 @@
         </p>
         <div class="about-btn">
           <a href="#" target="_blank" aria-label="button">
-            <button-type class="btn">Get My Resume </button-type></a
-          >
+            <button-type class="btn">Get My Resume </button-type></a>
         </div>
         <div class="about2"></div>
         <ul class="flex-container margin-left-right-auto" id="about-me-card-wrapper"></ul>
