fixing error and readjusting the image

--- a/index.html
+++ b/index.html
@@ -134,57 +134,59 @@
         <h2 class="works-header">My Recent Works</h2>
         <span class="line"></span>
         <div class="works"></div>
-        <div class="detail-container-wrapper">
-          <div class="detail-container">
-            <div class="box-container">
-              <div class="detail-cancel-container">
-              <img class="detail-cancel-icon" src="image/cancel-icon-desktop.jpg" alt="cancel icon" />
-              <img class="detail-cancel-mobile-icon" src="image/cancel-icon.jpg" alt="cancel icon" />
-              <img class="detail-mobile-image" src="image/mobile-popup.svg" alt="mobile image" />
-              <img class="detail-desktop-image" src="image/popup.png" alt="desktop image" />
-              <div class="detail-heading">
-                <h1 class="detail-project-title">Keeping track of hundreds of components</h1>
-                <div class="detail-content-btn">
-                  <button-style class="detail-See-Live"
+        <div class="modal-container">
+          <div class="box-container">
+            <div class="modal-cancel-container">
+              <img
+                class="modal-cancel-icon"
+                src="image/cancel-icon-desktop.jpg"
+                alt="cancel icon"
+              />
+              <img class="modal-cancel-mobile-icon" src="image/cancel-icon.jpg" alt="cancel icon" />
+              <img class="modal-mobile-image" src="image/mobile-popup.jpg" alt="mobile image" />
+              <img class="modal-desktop-image" src="image/popup.png" alt="desktop image" />
+              <div class="modal-heading">
+                <h1 class="modal-project-title">Keeping track of hundreds of components</h1>
+                <div class="modal-content-btn">
+                  <button-style class="modal-See-Live"
                     >See-Live
-                    <img src="image/icon-export.svg" class="detail-icon" alt="icon -export" />
+                    <img src="image/icon-export.svg" class="modal-icon" alt="icon -export" />
                   </button-style>
-                  <button-style class="detail-See-Source"
+                  <button-style class="modal-See-Source"
                     >See-Source
-                    <img src="image/icon-github.svg" class="detail-icon" alt="icon -github" />
+                    <img src="image/icon-github.svg" class="modal-icon" alt="icon -github" />
                   </button-style>
                 </div>
               </div>
-              <ul class="detail-attri-mobile-content">
-                <li class="detail-mobile-tags contrast">Html</li>
-                <li class="detail-mobile-tags contrast">Css</li>
-                <li class="detail-mobile-tags contrast">Javascript</li>
-                <li class="detail-mobile-tags contrast">Ruby on Rails</li>
+              <ul class="modal-attri-mobile-content">
+                <li class="modal-mobile-tags contrast">Html</li>
+                <li class="modal-mobile-tags contrast">Css</li>
+                <li class="modal-mobile-tags contrast">Javascript</li>
+                <li class="modal-mobile-tags contrast">Ruby on Rails</li>
               </ul>
-              <ul class="detail-attri-desktop-content">
-                <li class="detail-desktop-tags contrast">CodeKit</li>
-                <li class="detail-desktop-tags contrast">Github</li>
-                <li class="detail-desktop-tags contrast">Bootstrap</li>
-                <li class="detail-desktop-tags contrast">Terminal</li>
-                <li class="detail-desktop-tags contrast">Codepen</li>
+              <ul class="modal-attri-desktop-content">
+                <li class="modal-desktop-tags contrast">CodeKit</li>
+                <li class="modal-desktop-tags contrast">Github</li>
+                <li class="modal-desktop-tags contrast">Bootstrap</li>
+                <li class="modal-desktop-tags contrast">Terminal</li>
+                <li class="modal-desktop-tags contrast">Codepen</li>
               </ul>
-              <p class="detail-summary">
+              <p class="modal-summary">
                 Lonem ipsium is simply dummy text of the printing and typeseting industry. Lorem
                 ipeum ha been the industry standard du mmy text ever since the 500s ,when an unknown
               </p>
-              <div class="detail-content-btn-btm">
-                <button-style class="detail-See-Live"
+              <div class="modal-content-btn-btm">
+                <button-style class="modal-See-Live"
                   >See-Live
-                  <img src="image/icon-export.svg" class="detail-icon" alt="icon -export" />
+                  <img src="image/icon-export.svg" class="modal-icon" alt="icon -export" />
                 </button-style>
-                <button-style class="detail-See-Source"
+                <button-style class="modal-See-Source"
                   >See-Source
-                  <img src="image/icon-github.svg" class="detail-icon" alt="icon -github" />
+                  <img src="image/icon-github.svg" class="modal-icon" alt="icon -github" />
                 </button-style>
               </div>
             </div>
           </div>
-        </div>
         </div>
       </article>
       <section class="about">
@@ -196,7 +198,8 @@
         </p>
         <div class="about-btn">
           <a href="#" target="_blank" aria-label="button">
-            <button-type class="btn">Get My Resume </button-type></a>
+            <button-type class="btn">Get My Resume </button-type></a
+          >
         </div>
         <div class="about2"></div>
         <ul class="flex-container margin-left-right-auto" id="about-me-card-wrapper"></ul>
