--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
       <article class="recent" id="about">
         <img class="vector-img" src="./image/vector.svg" alt="vector" />
         <h2 class="works-header">My Recent Works</h2>
-        <span class="line"></span>
+        <span class
+        ="line"></span>
         <div class="works"></div>
-        <div class="modal-container">
+        <div class="modal-container hidden">
           <div class="box-container">
             <div class="modal-cancel-container">
               <img
