--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
       <article class="recent" id="about">
         <img class="vector-img" src="./image/vector.svg" alt="vector" />
         <h2 class="works-header">My Recent Works</h2>
-        <span class
-        ="line"></span>
+        <span class="line"></span>
         <div class="works"></div>
         <div class="modal-container hidden">
           <div class="box-container">
@@ -149,14 +148,14 @@
               <div class="modal-heading">
                 <h1 class="modal-project-title">Keeping track of hundreds of components</h1>
                 <div class="modal-content-btn">
-                  <button-style class="modal-See-Live"
-                    >See-Live
+                  <button type="button" class="modal-See-Live">
+                    See-Live
                     <img src="image/icon-export.svg" class="modal-icon" alt="icon -export" />
-                  </button-style>
-                  <button-style class="modal-See-Source"
-                    >See-Source
+                  </button>
+                  <button type="button" class="modal-See-Source">
+                    See-Source
                     <img src="image/icon-github.svg" class="modal-icon" alt="icon -github" />
-                  </button-style>
+                  </button>
                 </div>
               </div>
               <ul class="modal-attri-mobile-content">
@@ -177,14 +176,14 @@
                 ipeum ha been the industry standard du mmy text ever since the 500s ,when an unknown
               </p>
               <div class="modal-content-btn-btm">
-                <button-style class="modal-See-Live"
-                  >See-Live
+                <button type="button" class="modal-See-Live">
+                  See-Live
                   <img src="image/icon-export.svg" class="modal-icon" alt="icon -export" />
-                </button-style>
-                <button-style class="modal-See-Source"
-                  >See-Source
+                </button>
+                <button type="button" class="modal-See-Source">
+                  See-Source
                   <img src="image/icon-github.svg" class="modal-icon" alt="icon -github" />
-                </button-style>
+                </button>
               </div>
             </div>
           </div>
