--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               </ul>
               <p class="modal-summary">
                 Lonem ipsium is simply dummy text of the printing and typeseting industry. Lorem
-                ipeum ha been the industry standard du mmy text ever since the 500s ,when an unknown
+                ipeum ha been the industry standard du mmy text ever since the 500s ,when an unknown lorewm
               </p>
               <div class="modal-content-btn-btm">
                 <button type="button" class="modal-See-Live">
