--- a/index.html
+++ b/index.html
@@ -149,39 +149,33 @@
                 <h1 class="modal-project-title">Keeping track of hundreds of components</h1>
                 <div class="modal-content-btn">
                   <button type="button" class="modal-See-Live">
-                    See-Live
-                    <img src="image/icon-export.svg" class="modal-icon" alt="icon -export" />
+                    See-Live 
+                    <img  class="modal-icon" src="image/icon-export.svg"  alt="icon -export" />
                   </button>
                   <button type="button" class="modal-See-Source">
                     See-Source
-                    <img src="image/icon-github.svg" class="modal-icon" alt="icon -github" />
+                    <img class="modal-icon" src="image/icon-github.svg" alt="icon -github" />
                   </button>
                 </div>
               </div>
-              <ul class="modal-attri-mobile-content">
-                <li class="modal-mobile-tags contrast">Html</li>
-                <li class="modal-mobile-tags contrast">Css</li>
-                <li class="modal-mobile-tags contrast">Javascript</li>
-                <li class="modal-mobile-tags contrast">Ruby on Rails</li>
-              </ul>
               <ul class="modal-attri-desktop-content">
-                <li class="modal-desktop-tags contrast">CodeKit</li>
-                <li class="modal-desktop-tags contrast">Github</li>
-                <li class="modal-desktop-tags contrast">Bootstrap</li>
-                <li class="modal-desktop-tags contrast">Terminal</li>
-                <li class="modal-desktop-tags contrast">Codepen</li>
+                <li class="modal-desktop-tags contrast">Html</li>
+                <li class="modal-desktop-tags contrast">Css</li>
+                <li class="modal-desktop-tags contrast">Javascript</li>
+                <li class="modal-desktop-tags contrast">Ruby on Rails</li>
               </ul>
+              
               <p class="modal-summary">
                 Lonem ipsium is simply dummy text of the printing and typeseting industry. Lorem
                 ipeum ha been the industry standard du mmy text ever since the 500s ,when an unknown
                 lorewm
               </p>
               <div class="modal-content-btn-btm">
-                <button type="button" class="modal-See-Live">
+                <button type="button" class="modal-See">
                   See-Live
                   <img src="image/icon-export.svg" class="modal-icon" alt="icon -export" />
                 </button>
-                <button type="button" class="modal-See-Source">
+                <button type="button" class="modal-See">
                   See-Source
                   <img src="image/icon-github.svg" class="modal-icon" alt="icon -github" />
                 </button>
