--- a/index.html
+++ b/index.html
@@ -143,14 +143,18 @@
                 alt="cancel icon"
               />
               <img class="modal-cancel-mobile-icon" src="image/cancel-icon.jpg" alt="cancel icon" />
-              <img class="modal-mobile-image" src="image/mobile-popup.jpg" alt="mobile image" />
-              <img class="modal-desktop-image" src="image/popup.png" alt="desktop image" />
+              <img
+                class="modal-desktop-image"
+                id="modal-mobile-image"
+                src="image/popup.png"
+                alt="desktop image"
+              />
               <div class="modal-heading">
                 <h1 class="modal-project-title">Keeping track of hundreds of components</h1>
                 <div class="modal-content-btn">
                   <button type="button" class="modal-See-Live">
-                    See-Live 
-                    <img  class="modal-icon" src="image/icon-export.svg"  alt="icon -export" />
+                    See-Live
+                    <img class="modal-icon" src="image/icon-export.svg" alt="icon -export" />
                   </button>
                   <button type="button" class="modal-See-Source">
                     See-Source
@@ -164,18 +168,18 @@
                 <li class="modal-desktop-tags contrast">Javascript</li>
                 <li class="modal-desktop-tags contrast">Ruby on Rails</li>
               </ul>
-              
+
               <p class="modal-summary">
                 Lonem ipsium is simply dummy text of the printing and typeseting industry. Lorem
                 ipeum ha been the industry standard du mmy text ever since the 500s ,when an unknown
                 lorewm
               </p>
               <div class="modal-content-btn-btm">
-                <button type="button" class="modal-See">
+                <button type="button" class="modal-See-Live">
                   See-Live
                   <img src="image/icon-export.svg" class="modal-icon" alt="icon -export" />
                 </button>
-                <button type="button" class="modal-See">
+                <button type="button" class="modal-See-Source">
                   See-Source
                   <img src="image/icon-github.svg" class="modal-icon" alt="icon -github" />
                 </button>
