--- a/index.html
+++ b/index.html
@@ -154,11 +154,15 @@
                 <div class="modal-content-btn">
                   <button type="button" class="modal-See-Live">
                     See-Live
-                    <img class="modal-icon" src="image/icon-export.svg" alt="icon -export" />
+                    <img
+                      src="image/icon-export.svg"
+                      class="modal-icon-liveDemo"
+                      alt="icon -export"
+                    />
                   </button>
                   <button type="button" class="modal-See-Source">
                     See-Source
-                    <img class="modal-icon" src="image/icon-github.svg" alt="icon -github" />
+                    <img src="image/icon-github.svg" class="modal-icon-github" alt="icon -github" />
                   </button>
                 </div>
               </div>
@@ -177,11 +181,11 @@
               <div class="modal-content-btn-btm">
                 <button type="button" class="modal-See-Live">
                   See-Live
-                  <img src="image/icon-export.svg" class="modal-icon" alt="icon -export" />
+                  <img src="image/icon-export.svg" class="modal-icon-liveDemo" alt="icon -export" />
                 </button>
                 <button type="button" class="modal-See-Source">
                   See-Source
-                  <img src="image/icon-github.svg" class="modal-icon" alt="icon -github" />
+                  <img src="image/icon-github.svg" class="modal-icon-github" alt="icon -github" />
                 </button>
               </div>
             </div>
