--- a/index.html
+++ b/index.html
@@ -152,18 +152,14 @@
               <div class="modal-heading">
                 <h1 class="modal-project-title">Keeping track of hundreds of components</h1>
                 <div class="modal-content-btn">
-                  <button type="button" class="modal-See-Live">
+                  <a href="#" target="_blank" aria-label="button" class="modal-See-Live">
                     See-Live
-                    <img
-                      src="image/icon-export.svg"
-                      class="modal-icon-liveDemo"
-                      alt="icon -export"
-                    />
-                  </button>
-                  <button type="button" class="modal-See-Source">
+                    <img src="image/icon-export.svg" class="modal-icon-liveDemo" alt="icon -export" />
+                   </a>
+                   <a href="#" target="_blank" aria-label="button" class="modal-See-Source">
                     See-Source
                     <img src="image/icon-github.svg" class="modal-icon-github" alt="icon -github" />
-                  </button>
+                   </a>
                 </div>
               </div>
               <ul class="modal-attri-desktop-content">
@@ -179,14 +175,14 @@
                 lorewm
               </p>
               <div class="modal-content-btn-btm">
-                <button type="button" class="modal-See-Live">
+                <a href="#" target="_blank" aria-label="button" class="modal-See-Live">
                   See-Live
                   <img src="image/icon-export.svg" class="modal-icon-liveDemo" alt="icon -export" />
-                </button>
-                <button type="button" class="modal-See-Source">
+                 </a>
+                 <a href="#" target="_blank" aria-label="button" class="modal-See-Source">
                   See-Source
                   <img src="image/icon-github.svg" class="modal-icon-github" alt="icon -github" />
-                </button>
+                 </a>
               </div>
             </div>
           </div>
