--- a/index.html
+++ b/index.html
@@ -152,14 +152,18 @@
               <div class="modal-heading">
                 <h1 class="modal-project-title">Keeping track of hundreds of components</h1>
                 <div class="modal-content-btn">
-                  <a href="#" target="_blank" aria-label="button" class="modal-See-Live">
+                  <a href="#" target="_blank" aria-label="button" class="modal-See-Live-Top">
                     See-Live
-                    <img src="image/icon-export.svg" class="modal-icon-liveDemo" alt="icon -export" />
-                   </a>
-                   <a href="#" target="_blank" aria-label="button" class="modal-See-Source">
+                    <img
+                      src="image/icon-export.svg"
+                      class="modal-icon-liveDemo"
+                      alt="icon -export"
+                    />
+                  </a>
+                  <a href="#" target="_blank" aria-label="button" class="modal-See-Source-Top">
                     See-Source
                     <img src="image/icon-github.svg" class="modal-icon-github" alt="icon -github" />
-                   </a>
+                  </a>
                 </div>
               </div>
               <ul class="modal-attri-desktop-content">
@@ -175,14 +179,14 @@
                 lorewm
               </p>
               <div class="modal-content-btn-btm">
-                <a href="#" target="_blank" aria-label="button" class="modal-See-Live">
+                <a href="#" target="_blank" aria-label="button" class="modal-See-Live-btm">
                   See-Live
                   <img src="image/icon-export.svg" class="modal-icon-liveDemo" alt="icon -export" />
-                 </a>
-                 <a href="#" target="_blank" aria-label="button" class="modal-See-Source">
+                </a>
+                <a href="#" target="_blank" aria-label="button" class="modal-See-Source-btm">
                   See-Source
                   <img src="image/icon-github.svg" class="modal-icon-github" alt="icon -github" />
-                 </a>
+                </a>
               </div>
             </div>
           </div>
