Add next/previous feature to popup element

--- a/index.html
+++ b/index.html
@@ -188,6 +188,16 @@
                   <img src="image/icon-github.svg" class="modal-icon-github" alt="icon -github" />
                 </a>
               </div>
+              <div class="modal-content-button">
+              <div class="modal-content-next-button">
+                <i class="fas fa-chevron-left"></i>
+              <p class="modal-next-button"> Next </p>
+              </div>
+              <div class="modal-content-previous-button">
+                <i class="fas fa-chevron-right"></i>
+              <p class="modal-previous-button">Previous</p>
+              </div>
+              </div>
             </div>
           </div>
         </div>
