--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <h2 class="works-header">My Recent Works</h2>
         <span class="line"></span>
         <div class="works"></div>
-        <div class="modal-container hidden">
+        <div class="modal-container hidden" id="modal-container">
           <div class="box-container">
             <div class="modal-cancel-container">
               <img
