Add more functionality to some features

--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
         </footer>
       </section>
       <article class="recent" id="about">
-        <img class="vector-img" src="./image/vector.svg" alt="vector" />
+        <a href = '#buttom'>
+        <img class="vector-img" id="bottom" src="./image/vector.svg" alt="vector" />
+       </a>
         <h2 class="works-header">My Recent Works</h2>
         <span class="line"></span>
         <div class="works"></div>
@@ -215,7 +217,7 @@
           >
         </div>
         <div class="about2"></div>
-        <ul class="flex-container margin-left-right-auto" id="about-me-card-wrapper"></ul>
+        <ul class="about-container margin-left-right-auto" id="about-me-card-wrapper"></ul>
       </section>
       <section class="contact" id="contact">
         <h4 class="contact-text">
@@ -248,7 +250,7 @@
           <p class="desktop3"></p>
         </form>
       </section>
-      <footer class="section margin-left-right-auto">
+      <footer class="section margin-left-right-auto" id="buttom">
         <div class="line3">
           <ul class="socials-list-after">
             <li class="socials-lists-item-after margin-left-right-auto">
@@ -336,6 +338,7 @@
           </ul>
           <p class="text"><a href="debbyblessing1234@gmail.com">debbyblessing1234@gmail.com</a></p>
           <div class="line2 margin-left-right-auto"></div>
+      
         </div>
       </footer>
     </main>
