Add utility folder so make the code more accessibile

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -130,9 +130,9 @@
         </footer>
       </section>
       <article class="recent" id="about">
-        <a href = '#buttom'>
-        <img class="vector-img" id="bottom" src="./image/vector.svg" alt="vector" />
-       </a>
+        <a href="#buttom">
+          <img class="vector-img" id="bottom" src="./image/vector.svg" alt="vector" />
+        </a>
         <h2 class="works-header">My Recent Works</h2>
         <span class="line"></span>
         <div class="works"></div>
@@ -191,14 +191,14 @@
                 </a>
               </div>
               <div class="modal-content-button">
-              <div class="modal-content-next-button">
-                <i class="fas fa-chevron-left"></i>
-              <p class="modal-next-button"> Next </p>
-              </div>
-              <div class="modal-content-previous-button">
-                <i class="fas fa-chevron-right"></i>
-              <p class="modal-previous-button">Previous</p>
-              </div>
+                <div class="modal-content-next-button">
+                  <i class="fas fa-chevron-left"></i>
+                  <p class="modal-next-button">Next</p>
+                </div>
+                <div class="modal-content-previous-button">
+                  <i class="fas fa-chevron-right"></i>
+                  <p class="modal-previous-button">Previous</p>
+                </div>
               </div>
             </div>
           </div>
@@ -338,7 +338,6 @@
           </ul>
           <p class="text"><a href="debbyblessing1234@gmail.com">debbyblessing1234@gmail.com</a></p>
           <div class="line2 margin-left-right-auto"></div>
-      
         </div>
       </footer>
     </main>
