--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   </head>
   <body>
     <!-- Top Navigation Menu -->
-
     <nav class="navbar-container margin-left-right-auto">
       <div class="mobile-menu-bar" id="portfolio">
         <a id="welcome" href="#">Welcome</a>
@@ -136,16 +135,22 @@
         <h2 class="works-header">My Recent Works</h2>
         <span class="line"></span>
         <div class="works"></div>
-        
-        <div class="modal-container hidden " id="modal-container">
+
+        <div class="modal-container hidden" id="modal-container">
           <div class="box-container">
             <div class="modal-cancel-container">
-              <img
-                class="modal-cancel-icon"
-                src="image/cancel-icon-desktop.jpg"
-                alt="cancel icon"
-              />
-              <img class="modal-cancel-mobile-icon" src="image/cancel-icon.jpg" alt="cancel icon" />
+              <div class="modal-cancel">
+                <img
+                  class="modal-cancel-icon"
+                  src="image/cancel-icon-desktop.jpg"
+                  alt="cancel icon"
+                />
+                <img
+                  class="modal-cancel-mobile-icon"
+                  src="image/cancel-icon.jpg"
+                  alt="cancel icon"
+                />
+              </div>
               <img
                 class="modal-desktop-image"
                 id="modal-mobile-image"
@@ -201,8 +206,8 @@
                   <p class="modal-previous-button">Previous</p>
                 </div>
               </div>
+            </div>
           </div>
-        </div>
         </div>
       </article>
       <section class="about">
@@ -341,8 +346,7 @@
           <div class="line2 margin-left-right-auto"></div>
         </div>
       </footer>
-    </main> 
-  </div>
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
